# carrot

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.py
.circleci/: config.yml
.github/workflows/: cmake-multiplatform.yml
cmake/: CodeCoverage.cmake  carrot-config.cmake  carrot-config.cmake.in  enableLTO.cmake
conan/: conanfile.py
conan/ci/: conanfile.txt
conan/ci/linux/: conanfile.txt
conan/ci/windows/: conanfile.txt
conan/ubuntu-24.04-clang-ci/profiles/: Debug
conan/ubuntu-24.04-gcc-ci/profiles/: Debug  Release
conan/ubuntu-latest-clang-ci/profiles/: Debug  Release
conan/ubuntu-latest-gcc-ci/profiles/: Debug  Release
conan/windows-latest-ci/profiles/: Debug  Release
conan/windows-latest-cl-ci/profiles/: Debug  Release
doc/: Doxyfile.in
doc/user-guide/: conf.py.in  index.rst
examples/: CMakeLists.txt  example1.cpp
include/carrot/: block.hpp  caret_block.hpp  caret_underline_block.hpp  carrot.hpp  checkbox_list_block.hpp  color.hpp  color_map.hpp  empty_block.hpp  exception.hpp  form.hpp  form_view.hpp  frame_block.hpp  glyph.hpp  grapheme_cluster_view.hpp  grid_block.hpp  indent_block.hpp  integers.hpp  irregular_grid_block.hpp  line_block.hpp  list_block.hpp  matrix.hpp  matrix_view.hpp  placeholder_block.hpp  plain_form.hpp  progress_bar_block.hpp  style.hpp  style_flags.hpp  table_block.hpp  target_info.hpp  text_block.hpp  underline_block.hpp
include/qbb/carrot/: renderer.hpp
src/: CMakeLists.txt  block.cpp  caret_block.cpp  caret_underline_block.cpp  checkbox_list_block.cpp  color.cpp  color_map.cpp  empty_block.cpp  form.cpp  form_view.cpp  frame_block.cpp  glyph.cpp  grapheme_cluster_view.cpp  grapheme_cluster_view.hpp  grid_block.cpp  indent_block.cpp  irregular_grid_block.cpp  line_block.cpp  list_block.cpp  matrix.cpp  matrix_view.cpp  placeholder_block.cpp  plain_form.cpp  progress_bar_block.cpp  renderer.cpp  style.cpp  style_flags.cpp  table_block.cpp  target_info.cpp  text_block.cpp  underline_block.cpp
src/interface/carrot/: CMakeLists.txt  block.hpp  carrot.hpp  checkbox_list_block.hpp  color_map.hpp  empty_block.hpp  exception.hpp  form.hpp  form_view.hpp  frame_block.hpp  glyph.hpp  indent_block.hpp  integers.hpp  plain_form.hpp  style.hpp
tests/: CMakeLists.txt  basic_test.cpp  color.cpp  default_style.cpp  rendering.cpp
